scenarios/uc22-cluster-upgrade/backend-pod-spot/kustomize/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend-pod-spot
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: backend-pod-spot
