scenarios/uc22-cluster-upgrade/backend-pod-spot/kustomize/resources/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend-pod-spot
spec:
  to:
    kind: Service
    name: backend-pod-spot
  port:
    targetPort: 8080
  tls:
    termination: edge
